RESOLVED FIXED146172
Fix format strings in NetworkCache.cpp and NetworkCacheStatistics.cpp and WebIDBServerConnection.cpp
https://bugs.webkit.org/show_bug.cgi?id=146172
Summary Fix format strings in NetworkCache.cpp and NetworkCacheStatistics.cpp and Web...
Michael Catanzaro
Reported 2015-06-19 17:06:57 PDT
This is a follow-up to bug #145960. Apparently I missed two files. Note: this patch is not a completely literal translation like the last one, because it fixes WebIDBServerConnection::createObjectStore printing an int64_t as an unsigned long long.
Attachments
Patch (30.68 KB, patch)
2015-06-19 17:44 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2015-06-19 17:10:08 PDT
Also NetworkCache.cpp, which I almost missed next to NetworkCacheStatistics.cpp because it only has one warning.
Michael Catanzaro
Comment 2 2015-06-19 17:44:03 PDT
WebKit Commit Bot
Comment 3 2015-06-21 06:16:55 PDT
Comment on attachment 255255 [details] Patch Clearing flags on attachment: 255255 Committed r185807: <http://trac.webkit.org/changeset/185807>
WebKit Commit Bot
Comment 4 2015-06-21 06:16:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.